[package]
name = "warp-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.6"
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
futures-util = "0.3.30"
rand = "0.8.5"
clap = { version = "4.5.1", features = ["derive"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
